Well, did some refactoring according to the guide. I learnt something about lifecycle activity, I've heard about it a few times already. Seems to be an important thing

--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -3,15 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.Settings">
+    tools:context=".ui.fragments.BaseFragment">
 
-
+    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/textView"
-        android:textColor="@color/colorBlack"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Настройки" />
-
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
